# bun-dns

./: .gitignore  bun-dns-domains.config  bun-dns.py  env.config  pyproject.toml  setup.py
bun_dns/: main.py
debian/: bun-dns.service  changelog  control  install  rules
debian/source/: options
python/: bun-dns.py
services/: bun-dns.service  bun-dns.timer  services-installer.config
src/bun-dns/: main.py
